Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,8 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-   <form method="POST" ='/team'>
+   <form method="POST" action="/team">
+     
      
    </form>
  </body>
