--- a/views/team.erb
+++ b/views/team.erb
@@ -5,8 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
-  <form method="POST" action="/team">
-     <p>Team Name: <input type="text" name="team_name"></p>
+   <p>Team Name: </p>
      <p>Coach: <input type="text" name="coach"></p>
      <p>Point Guard: <input type="text" name="point_guard"></p>
      <p>Shooting Guard: <input type="text" name="shooting_guard"></p>
@@ -14,7 +13,7 @@
      <p>Power Forward: <input type="text" name="power_forward"></p>
      <p>Center: <input type="text" name="center"></p>
      <input type="submit" id="submit">
-
+  
 
  </body>
 </html>
