Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,14 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <p>Team Name: </p>
-     <p>Coach: <input type="text" name="coach"></p>
-     <p>Point Guard: <input type="text" name="point_guard"></p>
-     <p>Shooting Guard: <input type="text" name="shooting_guard"></p>
-     <p>Small Forward: <input type="text" name="small_forward"></p>
-     <p>Power Forward: <input type="text" name="power_forward"></p>
-     <p>Center: <input type="text" name="center"></p>
-     <input type="submit" id="submit">
+   Team Name:
+   Coach: <input type="text" name="coach"></p>
+   Point Guard: <input type="text" name="point_guard"></p>
+   Shooting Guard: <input type="text" name="shooting_guard"></p>
+   Small Forward: <input type="text" name="small_forward"></p>
+   Power Forward: <input type="text" name="power_forward"></p>
+   Center: <input type="text" name="center"></p>
   
 
  </body>
