--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   Team Name:
+   Team Name: <%= params[:team_name] %>
    Coach: <input type="text" name="coach"></p>
    Point Guard: <input type="text" name="point_guard"></p>
    Shooting Guard: <input type="text" name="shooting_guard"></p>
