Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -6,12 +6,12 @@
  </head>
  <body>
    Team Name: <%= params[:team_name] %>
-   Coach: <input type="text" name="coach"></p>
-   Point Guard: <input type="text" name="point_guard"></p>
-   Shooting Guard: <input type="text" name="shooting_guard"></p>
-   Small Forward: <input type="text" name="small_forward"></p>
-   Power Forward: <input type="text" name="power_forward"></p>
-   Center: <input type="text" name="center"></p>
+   Coach: <%= params[:coach] %>
+   Point Guard: <%= params[:point_guard] %>
+   Shooting Guard: <%= params[:shooting_guard] %>
+   Small Forward: <%= params[:small_forward] %>
+   Power Forward: <%= params[:power_forward] %>
+   Center: <%= params[:center] %>
   
 
  </body>
