Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,13 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   Team Name: <%= params[:team_name] %>
-   Coach: <%= params[:coach] %>
-   Point Guard: <%= params[:point_guard] %>
-   Shooting Guard: <%= params[:shooting_guard] %>
-   Small Forward: <%= params[:small_forward] %>
-   Power Forward: <%= params[:power_forward] %>
-   Center: <%= params[:center] %>
+   <p>Team Name: <%= params[:team_name] %></p>
+   <p>TCoach: <%= params[:coach] %></p>
+   <p>TPoint Guard: <%= params[:point_guard] %></p>
+   <p>TShooting Guard: <%= params[:shooting_guard] %></p>
+   <p>TSmall Forward: <%= params[:small_forward] %></p>
+   <p>TPower Forward: <%= params[:power_forward] %></p>
+   <p>TCenter: <%= params[:center] %></p>
   
 
  </body>
