--- a/views/team.erb
+++ b/views/team.erb
@@ -6,12 +6,12 @@
  </head>
  <body>
    <p>Team Name: <%= params[:team_name] %></p>
-   <p>TCoach: <%= params[:coach] %></p>
-   <p>TPoint Guard: <%= params[:point_guard] %></p>
-   <p>TShooting Guard: <%= params[:shooting_guard] %></p>
-   <p>TSmall Forward: <%= params[:small_forward] %></p>
-   <p>TPower Forward: <%= params[:power_forward] %></p>
-   <p>TCenter: <%= params[:center] %></p>
+   <p>Coach: <%= params[:coach] %></p>
+   <p>Point Guard: <%= params[:point_guard] %></p>
+   <p>Shooting Guard: <%= params[:shooting_guard] %></p>
+   <p>Small Forward: <%= params[:small_forward] %></p>
+   <p>Power Forward: <%= params[:power_forward] %></p>
+   <p>Center: <%= params[:center] %></p>
   
 
  </body>
