Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,13 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <p>Team Name: <%= params[:team_name] %></p>
-   <p>Coach: <%= params[:coach] %></p>
-   <p>Point Guard: <%= params[:point_guard] %></p>
-   <p>Shooting Guard: <%= params[:shooting_guard] %></p>
-   <p>Small Forward: <%= params[:small_forward] %></p>
-   <p>Power Forward: <%= params[:power_forward] %></p>
-   <p>Center: <%= params[:center] %></p>
+   <h1>Team Name: <%= params[:team_name] %></h1>
+   <h1>Coach: <%= params[:coach] %></h1>
+   <h1>Point Guard: <%= params[:point_guard] %></h1>
+   <h1>Shooting Guard: <%= params[:shooting_guard] %></h1>
+   <h1>Small Forward: <%= params[:small_forward] %></h1>
+   <h1>Power Forward: <%= params[:power_forward] %></h1>
+   <h1>Center: <%= params[:center] %></h1>
   
 
  </body>
