--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <h1>Team Name: <%= params[:team_name] %></h1>
+   <h1>Team Name: <%= params[:name] %></h1>
    <h1>Coach: <%= params[:coach] %></h1>
    <h1>Point Guard: <%= params[:pg] %></h1>
    <h1>Shooting Guard: <%= params[:sg] %></h1>
